--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,6 +12,11 @@ archer:
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
 
+lana:
+  name: Lana Something
+  email: lana@example.com
+  password_digest: <%= User.digest('password') %>
+
 <% 32.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
